# ssdp-advertiser

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: build-release.yml
src/: Makefile.am  fetch.cpp  fetch.hpp  main.cpp
systemd/: Makefile.am  ssdp-advertiser.service.in
